# anchor-sub-sync

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
anchor/: __init__.py  cli.py  core.py  hardware.py  pytorch_compat.py  translation.py  utils.py
anchor/api/: api.py
anchor/core/: translation.py
anchor/core/audiosync/: audiosync.py
anchor/core/burn/: burn.py
anchor/core/clean/: clean.py  operations.py
anchor/core/container/: container.py
anchor/core/convert/: convert.py  image_subtitles.py
anchor/core/download/: download.py  scoring.py
anchor/core/download/providers/: addic7ed.py  opensubtitles.py  podnapisi.py  subdl.py
anchor/core/pointsync/: automatic.py  common.py  manual.py  pointsync.py
anchor/core/referencesync/: referencesync.py
anchor/core/transcribe/: transcribe.py
anchor/core/translate/: translate.py
anchor/utils/: alignment.py  args.py  config.py  container.py  dependencies.py  files.py  formatting.py  hashing.py  languages.py  mappings.py  parsers.py  selections.py  ui.py  validations.py  video.py  whisper.py
