[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anchor-sub-sync"
version = "1.0.1"
description = "GPU-accelerated AI Subtitle Sync"
requires-python = ">=3.9"
dependencies = [
    "rich",
    "torch",
    "numpy",
    "whisperx @ git+https://github.com/m-bain/whisperX.git",
    "pysubs2",
    "py-cpuinfo",
    "ctranslate2>=4.6.0"
]

[project.scripts]
anchor = "anchor.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.semantic_release]
version_variables = ["anchor/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "python -m pip install build && python -m build"