[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anchor-sub-sync"
version = "1.5.0"
description = "GPU-accelerated AI Subtitle Sync"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich",
    "torch",
    "numpy",
    "whisperx",
    "pysubs2",
    "py-cpuinfo",
    "ctranslate2>=4.6.0",
    "langdetect",
    "transformers",
    "huggingface_hub",
]

[project.scripts]
anchor = "anchor.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.semantic_release]
version_variables = ["anchor/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
build_command = "pip install build && python -m build"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true